- patrols can capture watchtowers, player can't, fix it so patrols can't if it's locked, either.
- Seems like watchtowers are perma-locked due to nex interaction? Check that out
- Artillery stations are stuck in perma-repair on game start and never repair themselves
- reduce artillery station spawn rate
- force presence in systems with nexus

Requests
- Add keyboard shortcuts to all indEvo industry menu points
- Make it so if we kill the artillery station we can convert its husk into a outpost without having to colonize the planet
- Minefield and artillery as planet conditions so it shows up in search

Upcoming
- Add a secondary way to access colony options
- consumable item that makes your fleet look bigger than is is to NPCs
    - maybe add a boat with like 200 dp to the fleet and remove it when ui window is opened so other fleets run from you
- Add something that lets you remove S-Mods
- Change derelict industries to superstructures
- Artillery industry images
- add roaming derelict fleets to uninhabited arty systems
- Casino
    - Blackjack
    - Roulette
    - Slot machines
    - add "spacer captain in debt" bar event: sells his last ship for half off to pay his debt
    - add "officer in debt" bar event - hire for 3x salary
    - add "spacers in debt" bar event - 10 spacers, hire for half pay to avoid indentured servitude
- Consumable item that allows forced targetting of artillery on mouse pos

--------------------------- known issues without fix -----------------------------

Added - Behaviour: Deliver (Transports cargo to planet, delivers it into storage, then returns to your fleet)
DELIVER FLEETS REFUSE TO LEAVE SYSTEM AFTER DELIVERY; MAYBE MOVE INTO HYPERSPACE OR MANUALLY SET MOVE TARGET?

There are some bugs with detachments crashing

hey with the current IndEvo patch all my crew in the detachment are getting eaten up after a day has passed.
 The pattern is 1 full day after creating the detachment.